UW alert alignment fix

--- a/myuw/static/css/mobile.less
+++ b/myuw/static/css/mobile.less
@@ -121,7 +121,8 @@ body {
     top: 15px;
 }
 
-.alert {
+.uwalert {
+    padding: 15px 0px 15px 0px;
     
     h1 { font-size: 16px; margin: 0; margin-bottom: 8px; margin-left: 23px; }
     p { font-size: 12px;  margin-left: 23px; }
